Gotta center my car

--- a/Green Simple Theme.css
+++ b/Green Simple Theme.css
@@ -28,6 +28,11 @@
 	.contact_panel {
 		text-align: center;
 	}
+
+	#id_mycar {
+		margin: 0 auto;
+		text-align: center;
+	}
 	
 	#id_footprints {
 		text-align: center;
